--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-node_modules
+# dependencies
+/node_modules
+/AppGenerated/Logistics/LogisticsNodeApp/node_modules
+/AppGenerated/Logistics/LogisticsReactApp/node_modules
+
+# Output files
+/output
