--- a/AppGenerated/Logistics/LogisticsReactApp/package.json
+++ b/AppGenerated/Logistics/LogisticsReactApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
