Update: Get, Delete single booking details.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /AppGenerated/Logistics/LogisticsNodeApp/node_modules
 /AppGenerated/Logistics/LogisticsReactApp/node_modules
+/.vscode/
 
 # Output files
 /output
