--- a/AppGenerated/Logistics/LogisticsReactApp/package.json
+++ b/AppGenerated/Logistics/LogisticsReactApp/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
