--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^3.4.6",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
