--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^3.4.0",
     "@coreui/react": "^3.4.6",
-    "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
-    "font-awesome": "^4.7.0",
+    "bootstrap": "^4.6.0",
     "joi-browser": "^13.4.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^4.3.1",
+    "react-hook-form": "^7.0.4",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
     "react-select": "^4.3.0"
   },
