--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -19,9 +19,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hook-form": "^7.0.4",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
     "react-select": "^4.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.32.9"
   },
   "scripts": {
