--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -30,6 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "PORT=3424 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
