--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-server": "PORT=3424 react-scripts start",
+    "start-server": "pm2 start /node_modules/react-scripts/scripts/start.js --name LogisticsReactApp",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
