--- a/LogisticsReactApp/package.json
+++ b/LogisticsReactApp/package.json
@@ -26,6 +26,7 @@
     "react-select": "^4.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.16.6",
     "yup": "^0.32.9"
   },
   "scripts": {
